Launcher3: Add support for icon packs
- Supports icon packs from nova and adw
- Live preview in settings
- Default applied icon pack via overlay

Change-Id: Ie9879fa30f4cd9d52356acf78a423b415657510c
Signed-off-by: Adithya R <gh0strider.2k18.reborn@gmail.com>

--- a/res/values/corvus_strings.xml
+++ b/res/values/corvus_strings.xml
@@ -51,4 +51,10 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <!-- Google feed -->
     <string name="left_tab_label">Google feed tab</string>
     <string name="left_tab_description">Toggle Google feed intergration, Google search app is required</string>
+
+    <!-- Icon pack -->
+    <string name="icon_pack_title">Icon pack</string>
+    <string name="icon_pack_default_label">Default</string>
+    <string name="icon_pack_add">Install more</string>
+    <string name="icon_pack_no_market">There\'s no available app store</string>
 </resources>
