--- a/res/values/corvus_strings.xml
+++ b/res/values/corvus_strings.xml
@@ -42,4 +42,11 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <string name="trust_apps_info_hidden">Hidden apps and their widgets are hidden from the drawer</string>
     <string name="trust_apps_info_protected">Protected apps require authentication to be opened from the launcher</string>
 
+    <!-- Google feed -->
+    <string name="left_tab_label">Google feed tab</string>
+    <string name="left_tab_description">Toggle Google feed intergration, Google search app is required</string>
+
+    <!-- Suggestions -->
+    <string name="suggestion_pref_screen_title">Suggestions</string>
+    <string name="suggestion_pref_screen_desc">For All Apps &amp; Home screen suggestions</string>
 </resources>
