--- a/quickstep/res/layout/overview_actions_container.xml
+++ b/quickstep/res/layout/overview_actions_container.xml
@@ -17,7 +17,7 @@
 <com.android.quickstep.views.OverviewActionsView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="@dimen/overview_actions_height"
-    android:layout_gravity="center_horizontal|bottom">
+    android:layout_gravity="center_horizontal|center_vertical|bottom">
 
     <LinearLayout
         android:id="@+id/action_buttons"
@@ -32,7 +32,7 @@
             style="@style/OverviewActionButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:drawableStart="@drawable/ic_screenshot"
+            android:drawableTop="@drawable/ic_screenshot"
             android:text="@string/action_screenshot"
             android:theme="@style/ThemeControlHighlightWorkspaceColor" />
 
@@ -44,7 +44,7 @@
             android:layout_height="wrap_content"
             android:text="@string/recents_clear_all"
             android:theme="@style/ThemeControlHighlightWorkspaceColor"
-            android:drawableStart="@drawable/ic_clear_all_recents"
+            android:drawableTop="@drawable/ic_clear_all_recents"
             />
 
         <Button
@@ -55,7 +55,7 @@
             android:layout_height="wrap_content"
             android:text="@string/recents_kill_app"
             android:theme="@style/ThemeControlHighlightWorkspaceColor"
-            android:drawableStart="@drawable/ic_kill_app_recents"
+            android:drawableTop="@drawable/ic_kill_app_recents"
             />
 
         <Button
@@ -64,7 +64,7 @@
             style="@style/OverviewActionButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:drawableStart="@drawable/ic_share"
+            android:drawableTop="@drawable/ic_share"
             android:text="@string/action_share"
             android:theme="@style/ThemeControlHighlightWorkspaceColor"
             android:visibility="gone" />
